--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ body > div {
 body {
 	background-color: #fff;
 	color: #333;
-	font-family: 'Open Sans', sans-serif;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 	font-size: 16px;
 	font-size:1.6rem;
 	font-weight: 300;
@@ -226,7 +226,7 @@ h4,
 h5,
 h6 {
 	color: #333;
-	font-family: 'Open Sans', sans-serif;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 	font-weight: 400;
 	line-height: 1.2;
 	margin: 0 0 10px;
@@ -942,6 +942,14 @@ img.alignright,
 
 .enews form + p {
 	margin-top: 24px;
+}
+
+/* ## Simple Social Icons
+--------------------------------------------- */
+
+.simple-social-icons ul li {
+    float: none;
+    display: inline-block;
 }
 
 /* ## Jetpack
