--- a/style.css
+++ b/style.css
@@ -593,7 +593,7 @@ th:first-child {
 
 /* ## Site Containers
 --------------------------------------------- */
-
+/* Sticky Footer */
 
 .site-container {
 	display: -ms-flexbox;
