css tweaks on beaver builder title and rearrange some footer widget rules

--- a/css/beaver.css
+++ b/css/beaver.css
@@ -17,6 +17,10 @@ Beaver Builder Full Width
 	display: none;
 }
 
+.fl-builder .fl-widget .entry-header {
+	display: block;
+}
+
 .fl-builder-content {
 	width: 100%;
 }
